--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
 
     "test": "npm-run-all test:*",
-    "test:html": "html-validate *.html", 
+    "test:html": "html-validate *.html",
 
-    "build": "npm-run-all build:* test",    
+    "build": "npm-run-all build:* test",
     "build:sass": "sass --style=compressed --no-source-map sass:css",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
 
@@ -20,7 +20,8 @@
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
 
     "watch": "npm-run-all build:* build-dev -p watch:*",
-    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
+    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\" \"js/*.js\"",
+
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev"
   },
   "keywords": [],
